<resources>
    <string name="app_name">My ostoMy</string>
    <string name="img_boot">img_boot</string>
    <string name="my_ostomy">My ostoMy</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Clément Nancelle</string>
    <string name="understand">Understand %1$d</string>
    <string name="care">Care %1$d</string>
    <string name="meal">Meal %1$d</string>
    <string name="life">Life %1$d</string>
    <string name="calendar">Calendar %1$d</string>
    <string name="information">Information %1$d</string>
    <string name="Understand">Understand</string>
    <string name="Care">Care</string>
    <string name="Meal">Meal</string>
    <string name="Life">Life</string>
    <string name="Calendar">Calendar</string>
    <string name="Information">Information</string>
    <string name="Lorem_Ipsum">Lorem Ipsum</string>
    <string name="lorem_ipsum_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.\n\nUt velit mauris, egestas sed, gravida nec, ornare ut, mi. Aenean ut orci vel massa suscipit pulvinar. Nulla sollicitudin. Fusce varius, ligula non tempus aliquam, nunc turpis ullamcorper nibh, in tempus sapien eros vitae ligula. Pellentesque rhoncus nunc et augue. Integer id felis. Curabitur aliquet pellentesque diam. Integer quis metus vitae elit lobortis egestas. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi vel erat non mauris convallis vehicula. Nulla et sapien. Integer tortor tellus, aliquam faucibus, convallis id, congue eu, quam. Mauris ullamcorper felis vitae erat. Proin feugiat, augue non elementum posuere, metus purus iaculis lectus, et tristique ligula justo vitae magna.\n\nAliquam convallis sollicitudin purus. Praesent aliquam, enim at fermentum mollis, ligula massa adipiscing nisl, ac euismod nibh nisl eu lectus. Fusce vulputate sem at sapien. Vivamus leo. Aliquam euismod libero eu enim. Nulla nec felis sed leo placerat imperdiet. Aenean suscipit nulla in justo. Suspendisse cursus rutrum augue. Nulla tincidunt tincidunt mi. Curabitur iaculis, lorem vel rhoncus faucibus, felis magna fermentum augue, et ultricies lacus lorem varius purus. Curabitur eu amet.</string>
    <string name="cat_description">The domestic cat (Felis silvestris catus or Felis catus) is a small, typically furry, carnivorous mammal. They are often called house cats when kept as indoor pets or simply cats when there is no need to distinguish them from other felids and felines. They are often valued by humans for companionship and for their ability to hunt vermin. There are more than seventy cat breeds recognized by various cat registries.\n\nCats are similar in anatomy to the other felids, with a strong flexible body, quick reflexes, sharp retractable claws and teeth adapted to killing small prey. Cat senses fit a crepuscular and predatory ecological niche. Cats can hear sounds too faint or too high in frequency for human ears, such as those made by mice and other small animals. They can see in near darkness. Like most other mammals, cats have poorer color vision and a better sense of smell than humans. Cats, despite being solitary hunters, are a social species, and cat communication includes the use of a variety of vocalizations (mewing, purring, trilling, hissing, growling and grunting) as well as cat pheromones and types of cat-specific body language.</string>
    <string name="napoleon_description">Napoléon Bonaparte (French: [napoleɔ̃ bɔnɑpaʁt]; 15 August 1769 – 5 May 1821) was a French statesman and military leader who rose to prominence during the French Revolution and led several successful campaigns during the French Revolutionary Wars. He was Emperor of the French from 1804 until 1814 and again briefly in 1815 during the Hundred Days. Napoleon dominated European and global affairs for more than a decade while leading France against a series of coalitions in the Napoleonic Wars. He won most of these wars and the vast majority of his battles, building a large empire that ruled over continental Europe before its final collapse in 1815. He is considered one of the greatest commanders in history, and his wars and campaigns are studied at military schools worldwide. Napoleon\'s political and cultural legacy has endured as one of the most celebrated and controversial leaders in human history.</string>
    <string name="france_description">France, officially the French Republic (French: République française), is a sovereign state whose territory consists of metropolitan France in Western Europe and several overseas regions and territories. The metropolitan area of France extends from the Mediterranean Sea to the English Channel and the North Sea, and from the Rhine to the Atlantic Ocean. The overseas territories include French Guiana in South America and several islands in the Atlantic, Pacific and Indian oceans. The country\'s 18 integral regions (five of which are situated overseas) span a combined area of 643,801 square kilometres (248,573 sq mi) and a total population of 67.25 million (as of June 2018). France is a unitary semi-presidential republic with its capital in Paris, the country\'s largest city and main cultural and commercial centre. Other major urban areas include Lyon, Marseille, Toulouse, Bordeaux, Lille and Nice.</string>
    <string name="gutemberg_description">Johannes Gensfleisch zur Laden zum Gutenberg (February 3, 1468) was a German blacksmith, goldsmith, printer, and publisher who introduced printing to Europe with the printing press. His introduction of mechanical movable type printing to Europe started the Printing Revolution and is regarded as a milestone of the second millennium, ushering in the modern period of human history. It played a key role in the development of the Renaissance, Reformation, the Age of Enlightenment, and the scientific revolution and laid the material basis for the modern knowledge-based economy and the spread of learning to the masses.\n\nGutenberg in 1439 was the first European to use movable type. Among his many contributions to printing are: the invention of a process for mass-producing movable type; the use of oil-based ink for printing books; adjustable molds; mechanical movable type; and the use of a wooden printing press similar to the agricultural screw presses of the period. His truly epochal invention was the combination of these elements into a practical system that allowed the mass production of printed books and was economically viable for printers and readers alike. Gutenberg\'s method for making type is traditionally considered to have included a type metal alloy and a hand mould for casting type. The alloy was a mixture of lead, tin, and antimony that melted at a relatively low temperature for faster and more economical casting, cast well, and created a durable type.</string>
    <string name="napoleon">Napoléon</string>
    <string name="france">France</string>
    <string name="cat">Cat</string>
    <string name="gutemberg">Gutemberg</string>
    <string name="back">back</string>
    <string name="alarm_text">Hurry up ! Time to wake up !</string>
    <string name="alarm_title">Alarm</string>
    <string name="stop">Stop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_a_memo">Set a memo</string>
    <string name="set_alarm">set alarm</string>
    <string name="alarm_set_to">Alarm set to: %1$s</string>
    <string name="na">N/A</string>
    <string name="alarm_will_be_set_at">Alarm will be set at: %1$s</string>
    <string name="done">Done</string>
    <string name="set_new_alarm">Set new alarm</string>
    <string name="error">Error</string>
    <string name="cannot_set_past_time">You cannot set a past time !</string>
    <string name="ok">ok</string>
    <string name="memo">Memo</string>
    <string name="priority">Priority</string>
    <string name="confirm">Confirm</string>
    <string name="date">Date</string>
    <string name="error_content_memo">You must put content in your memo !</string>
    <string name="error_date">You must put a date !</string>
    <string name="no_memo_please_add_in_calendar">No Memo, please add in Calendar</string>
    <string name="memo_list">Memo List</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="are_you_sure">Are you sure to delete this memo ?</string>
</resources>
