<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.homepage.InformationFragment">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/information.napoleon"
        style="@style/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_button"
        android:text="@string/napoleon"
        />

    <Button
        android:id="@+id/information.france"
        style="@style/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/france"/>

    <Button
        android:id="@+id/information.lorem_ipsum"
        style="@style/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/Lorem_Ipsum"
        />

    <Button
        android:id="@+id/information.cat"
        style="@style/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/cat"/>

    <Button
        android:id="@+id/information.gutemberg"
        style="@style/rounded_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/gutemberg"/>

</LinearLayout>