<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.memo.MemoActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/memo.title"
            style="@style/alarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_button"
            android:padding="10dp"
            android:text="@string/memo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <TextView
            android:id="@+id/memo.date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/rounded_button_white"
            android:padding="10dp"
            android:text="@string/na"
            app:layout_constraintBottom_toBottomOf="@+id/memo.date.button"
            app:layout_constraintEnd_toStartOf="@+id/memo.date.button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/memo.date.button" />

        <EditText
            android:id="@+id/memo.text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_button_white"
            android:ems="10"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:singleLine="true"
            app:layout_constraintBottom_toBottomOf="@+id/memo.confirm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memo.date.button"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/memo.priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_button_white"
            android:text="@string/priority"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memo.text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/memo.date.button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_button"
            android:text="@string/date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memo.title"
            app:layout_constraintVertical_bias="0.0"
            style="@style/alarm"/>

        <Button
            android:id="@+id/memo.confirm"
            style="@style/alarm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/rounded_button_green"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="263dp" />

    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>